--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-                        <span class="copyright">&copy; 2020 webbig.cn | <a href="http://www.beian.miit.gov.cn">京ICP备13023305号-1</a></span>
+                        <span class="copyright">&copy; 2020 webbig.cn | <a href="http://www.beian.miit.gov.cn" target="_blank">京ICP备13023305号-1</a></span>
 					</footer>
 
 			</div>
