--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 					<li><a href="https://www.guohuawei.com/" target="_blank" class="icon fa-wordpress"><span class="label">郭华伟的博客</span></a></li>
 					<li><a href="http://weibo.com/11394250" target="_blank" rel="nofollow noopener" class="icon fa-weibo"><span class="label">我的微博</span></a></li>
 					<li><a href="https://github.com/nosun" target="_blank" rel="nofollow noopener" class="icon fa-github"><span class="label">Github</span></a></li>
+					<li><a href="https://www.childforge.com" target="_blank" class="icon fa-graduation-cap"><span class="label">教而有方轻社区</span></a></li>
 							</ul>
 						</nav>
 					</header>
